--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     implementation("io.springfox:springfox-data-rest:3.0.0")
     implementation("io.springfox:springfox-bean-validators:3.0.0")
     implementation("io.springfox:springfox-boot-starter:3.0.0")
+
+    //IntelliJ용
+    //IntelliJ에서는 하기 annotationProcessor를 쓰면 별도의 querydsl 플러그인 및 플러그인 설정이 불필요.
+    //querydslVer = '4.4.0'
+    annotationProcessor("com.querydsl:querydsl-apt:4.4.0:jpa")
 }
 
 tasks.named('test') {
