--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -31,10 +31,16 @@ dependencies {
     implementation("io.springfox:springfox-bean-validators:3.0.0")
     implementation("io.springfox:springfox-boot-starter:3.0.0")
 
-    //IntelliJ용
+    //querydsl
     //IntelliJ에서는 하기 annotationProcessor를 쓰면 별도의 querydsl 플러그인 및 플러그인 설정이 불필요.
     //querydslVer = '4.4.0'
-    annotationProcessor("com.querydsl:querydsl-apt:4.4.0:jpa")
+    //annotationProcessor("com.querydsl:querydsl-apt:4.4.0:jpa")
+    //implementation("com.querydsl:querydsl-jpa:4.4.0")
+    //implementation("com.querydsl:querydsl-apt:4.4.0")
+
+    // 구글 구아바(Google Guava) 자바용 공통 라이브러리 오픈소스
+    implementation("com.google.guava:guava:29.0-jre")
+    annotationProcessor("com.google.guava:guava:29.0-jre")
 }
 
 tasks.named('test') {
