[BE/SC]Chore: Querydsl 5.0 설정

--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
@@ -33,14 +39,24 @@ dependencies {
 
     //querydsl
     //IntelliJ에서는 하기 annotationProcessor를 쓰면 별도의 querydsl 플러그인 및 플러그인 설정이 불필요.
-    //querydslVer = '4.4.0'
-    //annotationProcessor("com.querydsl:querydsl-apt:4.4.0:jpa")
-    //implementation("com.querydsl:querydsl-jpa:4.4.0")
-    //implementation("com.querydsl:querydsl-apt:4.4.0")
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    annotationProcessor(
+            "javax.persistence:javax.persistence-api",
+            "javax.annotation:javax.annotation-api",
+            "com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
 
     // 구글 구아바(Google Guava) 자바용 공통 라이브러리 오픈소스
     implementation("com.google.guava:guava:29.0-jre")
     annotationProcessor("com.google.guava:guava:29.0-jre")
+}
+
+// QueryDSL
+sourceSets {
+    main {
+        java {
+            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
+        }
+    }
 }
 
 tasks.named('test') {
