--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -23,7 +23,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
+
     implementation 'org.projectlombok:lombok:1.18.22'
+    implementation      'org.projectlombok:lombok'
+    testImplementation  'org.projectlombok:lombok'
+
+    annotationProcessor     'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 
     runtimeOnly("mysql:mysql-connector-java")
 
@@ -48,15 +54,6 @@ dependencies {
     // 구글 구아바(Google Guava) 자바용 공통 라이브러리 오픈소스
     implementation("com.google.guava:guava:29.0-jre")
     annotationProcessor("com.google.guava:guava:29.0-jre")
-}
-
-// QueryDSL
-sourceSets {
-    main {
-        java {
-            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
-        }
-    }
 }
 
 tasks.named('test') {
