--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.10.3'
     implementation 'com.google.guava:guava:29.0-jre'
 
+    // json
+    implementation group: 'org.json', name: 'json', version: '20220320'
+
     //aws s3
     implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
 
