--- a/frontend/mgmg-project/package.json
+++ b/frontend/mgmg-project/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.4.33",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
