--- a/frontend/mgmg-project/package.json
+++ b/frontend/mgmg-project/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.4.33",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
