--- a/frontend/mgmg-project/package.json
+++ b/frontend/mgmg-project/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
+    "moment": "^2.29.4",
     "register-service-worker": "^1.7.2",
     "sweetalert2": "^11.4.33",
     "vue": "^2.6.14",
