--- a/backend/mgmg-project/build.gradle
+++ b/backend/mgmg-project/build.gradle
@@ -66,10 +66,15 @@ dependencies {
 
     // json
     implementation group: 'org.json', name: 'json', version: '20220320'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
-    //aws s3
+    // aws s3
     implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'
 
+    // stt
+    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+    implementation 'org.apache.httpcomponents:httpmime:4.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
 
 tasks.named('test') {
