--- a/backend/py-mgmg-project/requirements.txt
+++ b/backend/py-mgmg-project/requirements.txt
@@ -1,17 +1,47 @@
-fastapi
-uvicorn
-pandas
-pydantic
-numpy
-
-# recommendation.py install
-sqlalchemy
-pymysql
-
-# predict
-mxnet
-gluonnlp
-sentencepiece
+anyio==3.6.1
+boto3==1.15.18
+botocore==1.18.18
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+Cython==0.29.32
+fastapi==0.85.0
+filelock==3.8.0
+flatbuffers==2.0.7
+gluonnlp==0.10.0
+graphviz==0.8.4
+greenlet==1.1.3
+h11==0.14.0
+huggingface-hub==0.0.12
+idna==3.4
+jmespath==0.10.0
+joblib==1.2.0
+kobert @ git+https://git@github.com/SKTBrain/KoBERT.git@47a69af87928fc24e20f571fe10c3cc9dd9af9a3
+mxnet==1.7.0.post2
+numpy==1.23.3
+onnxruntime==1.8.0
+packaging==21.3
+pandas==1.5.0
+protobuf==4.21.6
+pydantic==1.10.2
+PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.2.1
+PyYAML==6.0
+regex==2022.9.13
+requests==2.28.1
+s3transfer==0.3.7
+sacremoses==0.0.53
+sentencepiece==0.1.96
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+starlette==0.20.4
+tokenizers==0.10.3
+torch==1.10.1
+tqdm==4.64.1
 transformers==4.8.1
-torch
-git+https://git@github.com/SKTBrain/KoBERT.git@master
+typing_extensions==4.3.0
+urllib3==1.25.11
+uvicorn==0.18.3
