--- a/frontend/mgmg-project/package.json
+++ b/frontend/mgmg-project/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "chart.js": "^3.9.1",
+    "chart.js": "2.9.3",
     "core-js": "^3.8.3",
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
