--- a/backend/py-mgmg-project/requirements.txt
+++ b/backend/py-mgmg-project/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 Cython==0.29.32
+emoji==2.1.0
 fastapi==0.85.0
 filelock==3.8.0
 flatbuffers==2.0.7
