--- a/frontend/mgmg-project/package.json
+++ b/frontend/mgmg-project/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "chart.js": "2.9.3",
     "core-js": "^3.8.3",
