[FE/YS]Feat: PWA 캐시 정보 업데이트 및 모바일 환경 상태바 색 변경

--- a/frontend/mgmg-project/public/manifest.json
+++ b/frontend/mgmg-project/public/manifest.json
@@ -4,12 +4,12 @@
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "theme_color": "#4DBA87",
-  "background_color": "#000000",
-  "themeColor": "#4DBA87",
-  "msTileColor": "#000000",
+  "theme_color": "#CBEBEB",
+  "background_color": "linear-gradient(120deg, rgba(194,226,255,1) 0%, rgba(255,225,242,1) 100%)",
+  "themeColor": "#CBEBEB",
+  "msTileColor": "linear-gradient(120deg, rgba(194,226,255,1) 0%, rgba(255,225,242,1) 100%)",
   "appleMobileWebAppCapable": "yes",
-  "appleMobileWebAppStatusBarStyle": "black",
+  "appleMobileWebAppStatusBarStyle": "#CBEBEB",
   "iconPaths": {
     "favicon32": "img/icons/favicon-32x32.png",
     "favicon16": "img/icons/favicon-16x16.png",
