[FE/YS]Feat: PWA 글꼴 캐시 등록 및 배경색 변경

--- a/frontend/mgmg-project/public/manifest.json
+++ b/frontend/mgmg-project/public/manifest.json
@@ -5,11 +5,11 @@
   "scope": "/",
   "display": "standalone",
   "theme_color": "#CBEBEB",
-  "background_color": "linear-gradient(120deg, rgba(194,226,255,1) 0%, rgba(255,225,242,1) 100%)",
+  "background_color": "#FFCCE0",
   "themeColor": "#CBEBEB",
-  "msTileColor": "linear-gradient(120deg, rgba(194,226,255,1) 0%, rgba(255,225,242,1) 100%)",
+  "msTileColor": "#FFCCE0",
   "appleMobileWebAppCapable": "yes",
-  "appleMobileWebAppStatusBarStyle": "#CBEBEB",
+  "appleMobileWebAppStatusBarStyle": "#FFCCE0",
   "iconPaths": {
     "favicon32": "img/icons/favicon-32x32.png",
     "favicon16": "img/icons/favicon-16x16.png",
