--- a/frontend/mgmg-project/public/manifest.json
+++ b/frontend/mgmg-project/public/manifest.json
@@ -22,61 +22,61 @@
       "src": "/img/icons/favicon-16x16.png",
       "type": "image/png",
       "sizes": "16x16",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "./img/icons/favicon-32x32.png",
       "type": "image/png",
       "sizes": "32x32",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/msapplication-icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/mstile-150x150.png",
       "type": "image/png",
       "sizes": "150x150",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/android-chrome-maskable-192x192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/android-chrome-maskable-512x512.png",
       "type": "image/png",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "img/icons/apple-touch-icon-60x60.png",
       "type": "image/png",
       "sizes": "60x60",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/apple-touch-icon-76x76.png",
       "type": "image/png",
       "sizes": "76x76",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/apple-touch-icon-120x120.png",
@@ -87,13 +87,13 @@
       "src": "/img/icons/apple-touch-icon-152x152.png",
       "type": "image/png",
       "sizes": "152x152",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/img/icons/apple-touch-icon-180x180.png",
       "type": "image/png",
       "sizes": "180x180",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
